--- a/Assets/style.css
+++ b/Assets/style.css
@@ -27,7 +27,6 @@ textarea {
 
 .time-block {
   text-align: center;
-  border-radius: 15px;
 }
 
 .row {
@@ -37,22 +36,26 @@ textarea {
 }
 
 .hour {
+  text-align: center;
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
 }
 
 .past {
+  border-radius: 15px;
   background-color: #d3d3d3;
   color: white;
 }
 
 .present {
+  border-radius: 15px;
   background-color: #ff6961;
   color: white;
 }
 
 .future {
+  border-radius: 15px;
   background-color: #77dd77;
   color: white;
 }
